All_Component_DX/force-app/main/default/objects/Territory_Coverage__c/Territory_Coverage__c.object-meta.xml
<CustomObject>
    <customHelpPage>SVMX_LaunchHelp</customHelpPage>
    <description>This object captures coverage scope of a territory including geographical attributes such as zip, country etc. as well as non-geographical attributes such as industry or product. In addition, this object is used to capture adjancent territories for any territory. Coverage and Adjacency are separated by record types in this object</description>
    <label>Territory Coverage</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Territory Attribute Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Territory Coverage</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>