All_Component_DX/force-app/main/default/objects/Territory_Coverage__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the coverage record is active or not</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>