All_Component_DX/force-app/main/default/objects/Territory_Coverage__c/fields/Adjacent_Territory__c.field-meta.xml
<CustomField>
    <fullName>Adjacent_Territory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Name of the adjacent territory. Lookup to an existing territory in ServiceMax</description>
    <label>Adjacent Territory</label>
    <referenceTo>Territory__c</referenceTo>
    <relationshipLabel>Territory Coverage (Adjacent Territory)</relationshipLabel>
    <relationshipName>Adjacent_Territory</relationshipName>
    <type>Lookup</type>
</CustomField>