All_Component_DX/force-app/main/default/objects/Territory_Coverage__c/fields/Territory__c.field-meta.xml
<CustomField>
    <fullName>Territory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Name of the territory. Lookup to an existing territory in ServiceMax</description>
    <label>Territory</label>
    <referenceTo>Territory__c</referenceTo>
    <relationshipLabel>Territory Coverage (Territory)</relationshipLabel>
    <relationshipName>Territory_Coverage</relationshipName>
    <type>Lookup</type>
</CustomField>