All_Component_DX/force-app/main/default/objects/Territory_Coverage__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Type of coverage. Standard values include Zip, City, State, Country and Region</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>City</fullName>
            </value>
            <value>
                <fullName>Country</fullName>
            </value>
            <value>
                <fullName>State</fullName>
            </value>
            <value>
                <fullName>Zip</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>