All_Component_DX/force-app/main/default/objects/Territory_Coverage__c/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <description>Value for the coverage depending upon the coverage type. For example, if coverage type is Zip, Value will contain a zip/postal code</description>
    <label>Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>