All_Component_DX/force-app/main/default/objects/Territory_Coverage__c/recordTypes/Coverage.recordType-meta.xml
<RecordType>
    <fullName>Coverage</fullName>
    <active>true</active>
    <description>Captures Territory Attribute Details</description>
    <label>Coverage</label>
</RecordType>